# NicktechVPN

./: .dockerignore  .gitignore  Makefile  pyproject.toml
backend/: manage.py
backend/content/: admin.py  apps.py  models.py
backend/content/migrations/: 0001_initial.py  0002_alter_bottexts_start_message.py  0003_vpnsettings.py
backend/core/: admin.py  admin_apps.py  asgi.py  celery.py  config.py  settings.py  urls.py  wsgi.py
backend/payments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/payments/migrations/: 0001_initial.py  0002_alter_payment_status.py  0003_alter_payment_status.py
backend/servers/: admin.py  apps.py  models.py  py3xui.py  signals.py  tasks.py
backend/servers/migrations/: 0001_initial.py  0002_vpnserver_api_token.py
backend/users/: admin.py  apps.py  middlewares.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_refferal_balance.py
bot/: main.py
bot/handlers/: __init__.py  start.py
bot/keyboards/: inline.py
bot/utils/: db.py
docker/: docker-compose.dev.yaml
frontend/: .gitignore  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/api/: apiClient.ts  index.ts  referralApi.ts  tariffApi.ts  userApi.ts  xuiApi.ts  yookassaApi.ts
frontend/src/assets/: base.css  global.css
frontend/src/assets/styles/: global.css
frontend/src/components/: ActionButton.vue  BackButton.vue  DashboardButton.vue  InfoBanner.vue  Notification.vue  PromoButton.vue  ReferralLink.vue  ReferralUser.vue  StatsBox.vue  StepCard.vue  Stepper.vue  SvgIcon.vue  TariffPlan.vue
frontend/src/composables/: useNotification.ts  useTwaSdk.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/views/: HomeView.vue  ReferralView.vue  SubscriptionView.vue  VpnView.vue
