[project]
name = "nicktechvpn"
version = "0.1.0"
description = ""
authors = [
    {name = "Fotlex",email = "kudron02@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiofiles (==24.1.0)",
    "aiogram (==3.22.0)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.12.15)",
    "aiosignal (==1.4.0)",
    "amqp (==5.3.1)",
    "annotated-types (==0.7.0)",
    "anyio (==4.10.0)",
    "asgiref (==3.9.1)",
    "attrs (==25.3.0)",
    "billiard (==4.2.2)",
    "celery (>=5.5.3,<6.0.0)",
    "certifi (==2025.8.3)",
    "charset-normalizer (==3.4.3)",
    "click (==8.3.0)",
    "click-didyoumean (==0.3.1)",
    "click-plugins (==1.1.1.2)",
    "click-repl (==0.3.0)",
    "colorama (==0.4.6)",
    "cron-descriptor (==2.0.6)",
    "deprecated (==1.2.18)",
    "distro (==1.9.0)",
    "django (==5.2.6)",
    "django-celery-beat (==2.8.1)",
    "django-ninja (==1.4.3)",
    "django-redis (==6.0.0)",
    "django-timezone-field (==7.1)",
    "djangorestframework (==3.16.1)",
    "frozenlist (==1.7.0)",
    "gunicorn (==23.0.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "kombu (==5.5.4)",
    "magic-filter (==1.0.12)",
    "multidict (==6.6.4)",
    "netaddr (==1.3.0)",
    "packaging (==25.0)",
    "prompt-toolkit (==3.0.52)",
    "propcache (==0.3.2)",
    "psycopg2-binary (==2.9.10)",
    "py3xui (==0.5.1)",
    "pydantic (==2.11.9)",
    "pydantic-core (==2.33.2)",
    "python-crontab (==3.3.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.1)",
    "redis (==6.4.0)",
    "requests (==2.32.5)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlparse (==0.5.3)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "vine (==5.1.0)",
    "wcwidth (==0.2.13)",
    "wrapt (==1.17.3)",
    "yarl (==1.20.1)",
    "yookassa (==3.7.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
